<resources>
    <string name="app_name" translatable="false">XamoomSDK</string>

    <string name="image_saved_text">Image saved</string>
    <string name="cannot_save_image">Cannot save SVGs and GIFs</string>
    <string name="distanceLabel">Distance</string>
    <string name="meterLabel">meter</string>
    <string name="noLocation">Searching for location</string>
    <string name="header_picture_alt_text">Headerimage</string>
    <string name="open">Open</string>
    <string name="close_map">Close map</string>
    <string name="file_not_found">File not found</string>

    <string name="audioplayer_seek_time_text" translatable="false">30</string>
    <string name="audioplayer_notification_channel_name">Media playback</string>
    <string name="audioplayer_notification_channel_description">Media playback controls as notification</string>

    <string name="contentdescription_video_play_button" translatable="false">Play button for video</string>
    <string name="contentdescription_image_without_description" translatable="false">A image without description</string>
    <string name="contentdescription_link_icon" translatable="false">Icon for the link</string>
    <string name="contentdescription_thumbnailimage_linked_content" translatable="false">Thumbnail of the linked content</string>
    <string name="contentdescription_ebook_link_icon" translatable="false">Icon for the ebook link</string>
    <string name="contentdescription_download_link_icon" translatable="false">Icon for the download link</string>
    <string name="contentdescription_thumbnailimage_linked_spot" translatable="false">Thumbnail for the linked spot</string>
    <string name="contentdescription_chevron_right" translatable="false">Chevron pointing to the right</string>

    <string name="content_list_load_more_button_text">Load more</string>
    <string name="content_list_error_loading_text">Error loading</string>

    <string name="no_location_alert_title">We need your location</string>
    <string name="no_location_alert_message">The location services are disabled. Please go to the settings to turn them on.</string>
    <string name="no_location_alert_cancel">Cancel</string>
    <string name="no_location_alert_settings">Settings</string>

    <string name="event_calendar_title">Add to calendar</string>
    <string name="event_navigation_title">Navigate to the location</string>

    <string name="route">Route</string>

    <string name="elevation_radio_feet_title">IMPERIAL</string>
    <string name="elevation_radio_metres_title">METRIC</string>
    <string name="info_distance_label">Distance</string>
    <string name="info_ascent_descent_label">Ascent | Descent</string>
    <string name="info_time_label">Duration at %1$s</string>

    <string name="unavailable_quiz_label">Already solved quiz</string>

    <string name="save_ebook_alert_title">Ready</string>
    <string name="save_ebook_alert_message">The desired file has been downloaded and is ready for use.</string>
    <string name="save_ebook_alert_open">OPEN</string>
    <string name="save_ebook_alert_share">SAVE TO</string>

    <string name="mapbox_two_finger_move">USE TWO FINGERS TO MOVE THE MAP</string>
    <string name="beacon_service_stop_action">Stop</string>
    <string name="beacon_service_notification_name">Permanent Nearby Notification</string>
    <string name="beacon_service_notification_description">Showing notification when scanning for beacons</string>
    <string name="beacon_service_notification_title">Scanning nearby</string>

    <string name="photo_permission_title">Permission</string>
    <string name="photo_permission_message">We need your permission to save images. Please allow permission in settings.</string>
    <string name="permission_exit_button">Close</string>
    <string name="permission_settings_button">Settings</string>
    <string name="permission_result_toast">Permission not granted</string>


</resources>
