<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ContentBlocksTheme">

    <Button
        android:id="@+id/map_close_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="top|end"
        android:contentDescription="@string/close_map"
        android:background="@drawable/x"
        android:layout_margin="8dp"/>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
              android:name="com.google.android.gms.maps.SupportMapFragment"
              android:id="@+id/map"
              android:layout_width="match_parent"
              android:layout_height="match_parent"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:clipToPadding="true"
        android:background="@android:color/white"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/spot_title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textSize="22sp"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/spot_excerpt_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                />

            <Button
                android:id="@+id/spot_content_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/open"
                android:visibility="gone"
                style="@style/Widget.AppCompat.Button.Borderless"/>

            <ImageView
                android:id="@+id/spot_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/contentdescription_thumbnailimage_linked_spot"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/spot_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/bottom_sheet"
        app:layout_anchorGravity="right|end"
        android:src="@drawable/ic_navigation"
        android:tint="@android:color/white"
        app:rippleColor="@color/linkblock_facebook_background_color"
        android:layout_marginEnd="16dp"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>