<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"  android:layout_width="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">


    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/contentblock_to_contentblock_margin"
        android:orientation="vertical"
        android:theme="@style/ContentBlocksTheme">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/user_location_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/mapImageView"
                android:layout_alignEnd="@id/mapImageView"
                android:layout_gravity="top|end"
                android:layout_margin="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_user_location"
                android:tint="@android:color/black"
                app:backgroundTint="@android:color/white" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/center_spot_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_location_fab"
                android:layout_alignEnd="@+id/mapImageView"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_spot_bounds"
                android:tint="@android:color/black"
                app:backgroundTint="@android:color/white" />


            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginBottom="@dimen/contentblock_children_margin"
                android:textColor="@color/black"
                android:textSize="@dimen/contentblock_title_size" />

            <com.mapbox.mapboxsdk.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/mapImageView"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_below="@+id/titleTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:mapbox_cameraZoom="7"
                app:mapbox_renderTextureMode="true" />

            <RadioGroup
                android:id="@+id/elevation_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/mapImageView"
                android:layout_alignBottom="@+id/mapImageView"
                android:visibility="gone"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/elevation_radio_imperial"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="@drawable/radio_btn_flat_selector"
                    android:button="@android:color/transparent"
                    android:paddingStart="4dp"
                    android:paddingBottom="4dp"
                    android:paddingEnd="4dp"
                    android:paddingTop="4dp"
                    android:text="@string/elevation_radio_feet_title"
                    android:textColor="@drawable/radio_btn_flat_text_selector"
                    />


                <RadioButton
                    android:id="@+id/elevation_radio_metric"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="@drawable/radio_btn_flat_selector"
                    android:button="@android:color/transparent"
                    android:paddingStart="4dp"
                    android:paddingBottom="4dp"
                    android:paddingEnd="4dp"
                    android:paddingTop="4dp"
                    android:text="@string/elevation_radio_metres_title"
                    android:textColor="@drawable/radio_btn_flat_text_selector"
                    />
            </RadioGroup>




        </RelativeLayout>

        <LinearLayout
            android:id="@+id/bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#B3FFFFFF"
            android:clipToPadding="true"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <LinearLayout
                android:id="@+id/map_detail_inner_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/spot_title_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/spot_image_view"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginBottom="8dp"
                        android:scaleType="centerCrop" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/spot_excerpt_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="4"
                            android:ellipsize="end"
                            android:maxLines="4" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|bottom"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/spot_content_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="4dp"
                                android:layout_weight="0.5"
                                android:background="@drawable/map_detail_button_style"
                                android:text="@string/open"
                                android:textColor="@color/black"
                                android:textStyle="bold" />

                            <Button
                                android:id="@+id/spot_navigation_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:layout_weight="0.5"
                                android:background="@drawable/map_detail_button_style"
                                android:text="@string/route"
                                android:textColor="@color/black"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/elevationChart"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:visibility="gone"
        android:layout_below="@id/rootLayout" />



</RelativeLayout>